@@ -9,7 +9,7 @@ X-KDE-Library=amarok_collection-playdarcollection
 
 X-KDE-Amarok-authors=Andrew Coder
 X-KDE-Amarok-email=andrew.coder@gmail.com
-X-KDE-Amarok-framework-version=56
+X-KDE-Amarok-framework-version=57
 X-KDE-Amarok-name=playdar-collection
 X-KDE-Amarok-plugintype=collection
 X-KDE-Amarok-rank=100
