@@ -1,18 +1,18 @@
 /****************************************************************************************
-* Copyright (c) 2010 Andrew Coder <andrew.coder@gmail.com                              *
-*                                                                                      *
-* This program is free software; you can redistribute it and/or modify it under        *
-* the terms of the GNU General Public License as published by the Free Software        *
-* Foundation; either version 2 of the License, or (at your option) any later           *
-* version.                                                                             *
-*                                                                                      *
-* This program is distributed in the hope that it will be useful, but WITHOUT ANY      *
-* WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A      *
-* PARTICULAR PURPOSE. See the GNU General Public License for more details.             *
-*                                                                                      *
-* You should have received a copy of the GNU General Public License along with         *
-* this program.  If not, see <http://www.gnu.org/licenses/>.                           *
-****************************************************************************************/
+ * Copyright (c) 2010 Andrew Coder <andrew.coder@gmail.com>                             *
+ *                                                                                      *
+ * This program is free software; you can redistribute it and/or modify it under        *
+ * the terms of the GNU General Public License as published by the Free Software        *
+ * Foundation; either version 2 of the License, or (at your option) any later           *
+ * version.                                                                             *
+ *                                                                                      *
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY      *
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A      *
+ * PARTICULAR PURPOSE. See the GNU General Public License for more details.             *
+ *                                                                                      *
+ * You should have received a copy of the GNU General Public License along with         *
+ * this program.  If not, see <http://www.gnu.org/licenses/>.                           *
+ ****************************************************************************************/
 
 #include "ProxyResolver.h"
 
@@ -86,6 +86,7 @@ Playdar::ProxyResolver::collectSolution( Meta::PlaydarTrackPtr track )
 void
 Playdar::ProxyResolver::slotQueryDone( Playdar::Query* query, const Meta::PlaydarTrackList& tracks )
 {
+    Q_UNUSED( query );
     Q_UNUSED( tracks );
     this->deleteLater();
 }
