@@ -1,18 +1,18 @@
 /****************************************************************************************
-* Copyright (c) 2010 Andrew Coder <andrew.coder@gmail.com                              *
-*                                                                                      *
-* This program is free software; you can redistribute it and/or modify it under        *
-* the terms of the GNU General Public License as published by the Free Software        *
-* Foundation; either version 2 of the License, or (at your option) any later           *
-* version.                                                                             *
-*                                                                                      *
-* This program is distributed in the hope that it will be useful, but WITHOUT ANY      *
-* WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A      *
-* PARTICULAR PURPOSE. See the GNU General Public License for more details.             *
-*                                                                                      *
-* You should have received a copy of the GNU General Public License along with         *
-* this program.  If not, see <http://www.gnu.org/licenses/>.                           *
-****************************************************************************************/
+ * Copyright (c) 2010 Andrew Coder <andrew.coder@gmail.com>                             *
+ *                                                                                      *
+ * This program is free software; you can redistribute it and/or modify it under        *
+ * the terms of the GNU General Public License as published by the Free Software        *
+ * Foundation; either version 2 of the License, or (at your option) any later           *
+ * version.                                                                             *
+ *                                                                                      *
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY      *
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A      *
+ * PARTICULAR PURPOSE. See the GNU General Public License for more details.             *
+ *                                                                                      *
+ * You should have received a copy of the GNU General Public License along with         *
+ * this program.  If not, see <http://www.gnu.org/licenses/>.                           *
+ ****************************************************************************************/
 
 #ifndef QUERYMAKER_FUNCTION_TYPES_H
 #define QUERYMAKER_FUNCTION_TYPES_H
@@ -21,13 +21,33 @@
 
 using namespace Collections;
 
+/**
+ * A CurriedQMFunction is a call to any of the member functions
+ * of QueryMaker that return a QueryMaker*, which it's arguments
+ * specified, but missing, (normally implicit), this pointer parameter.
+ *
+ * Subclasses provide a typedef named FunPtr as a convenience, which
+ * provides a type equal to that of a pointer to a QueryMaker member
+ * function which returns a QueryMaker* and accepts the number and
+ * type of parameters that the CurriedQMFunction does. Having the
+ * typedefs in the classes prevents issues with C++'s lack of support
+ * for template typedefs.
+ */
 class CurriedQMFunction
 {
     public:
         virtual ~CurriedQMFunction() {};
+        /**
+         * Invokes the stored function, with the stored
+         * parameters, providing @param qm as the this pointer.
+         * @return qm
+         */
         virtual QueryMaker* operator()( QueryMaker *qm = 0 ) = 0;
 };
 
+/**
+ * The CurriedQMFunction for functions with no arguments.
+ */
 class CurriedZeroArityQMFunction : public CurriedQMFunction
 {
     public:
@@ -49,6 +69,9 @@ class CurriedZeroArityQMFunction : public CurriedQMFunction
         FunPtr m_function;
 };
 
+/**
+ * The CurriedQMFunction for functions with one arguments.
+ */
 template< class Type >
 class CurriedUnaryQMFunction : public CurriedQMFunction
 {    
@@ -73,6 +96,9 @@ class CurriedUnaryQMFunction : public CurriedQMFunction
         Type m_parameter;
 };
 
+/**
+ * The CurriedQMFunction for functions with two arguments.
+ */
 template< class FirstType, class SecondType >
 class CurriedBinaryQMFunction : public CurriedQMFunction
 {
@@ -99,6 +125,9 @@ class CurriedBinaryQMFunction : public CurriedQMFunction
         SecondType m_parameterTwo;
 };
 
+/**
+ * The CurriedQMFunction for functions with three arguments.
+ */
 template< class FirstType, class SecondType, class ThirdType >
 class CurriedTrinaryQMFunction : public CurriedQMFunction
 {
@@ -127,6 +156,13 @@ class CurriedTrinaryQMFunction : public CurriedQMFunction
         ThirdType m_parameterThree;
 };
 
+/**
+ * The CurriedQMFunction for functions with four arguments.
+ * Passing the QString as a reference to the constructor caused
+ * some problems, so this one's specialized for the only two
+ * members of QueryMaker that have four parameters, addFilter
+ * and excludeFilter.
+ */
 class CurriedQMStringFilterFunction : public CurriedQMFunction
 {
     public:
